<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/getChallengeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_challenge" />

    <EditText
        android:id="@+id/challengeKey"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/challenge_key"
        android:autofillHints=""
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <ImageView
        android:id="@+id/captchaImage"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/captcha_text" />

    <EditText
        android:id="@+id/captchaAnswer"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/captcha_answer"
        android:autofillHints="" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />

    <EditText
        android:id="@+id/userId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_id"
        android:inputType="number"
        android:autofillHints="" />

    <Button
        android:id="@+id/addDeviceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_device" />

    <Button
        android:id="@+id/removeDeviceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_device" />

    <Button
        android:id="@+id/lookupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lookup" />

    <EditText
        android:id="@+id/deviceAlias"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/device_alias"
        android:autofillHints="" />

    <Button
        android:id="@+id/testButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test" />

</LinearLayout>
